--- a/debug.ipynb
+++ b/debug.ipynb
@@ -301,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "84618152",
+   "id": "7f9ee7fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,11 +336,27 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f673f3f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27286056",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('base')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
