--- a/nomappo_research.ipynb
+++ b/nomappo_research.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d853ccbb",
+   "id": "088f6603",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "576b920e",
+   "id": "7bb4b14a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,10 +26,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4f0f727a",
+   "execution_count": 3,
+   "id": "4926edb3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<torch._C.Generator at 0x2638fdb3e50>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "random.seed(42)\n",
     "np.random.seed(42)\n",
@@ -38,8 +49,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "af5ce2b1",
+   "execution_count": 4,
+   "id": "b01ee436",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,8 +80,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "ae6f534b",
+   "execution_count": 5,
+   "id": "17b64994",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,21 +97,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "d005d620",
+   "execution_count": null,
+   "id": "3b4abd3a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.5256325450636679"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "nomappo.test(50)"
    ]
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "68e8676e",
+   "id": "ca3db43e",
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "7b04a135",
+   "id": "6916022f",
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "44a5831a",
+   "id": "5b7ea917",
    "metadata": {
     "scrolled": true
    },
@@ -4718,7 +4718,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e7b14b4",
+   "id": "48573382",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4726,7 +4726,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e65f164",
+   "id": "690464fd",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4734,7 +4734,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3554cced",
+   "id": "b7410d91",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4742,7 +4742,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -4756,7 +4756,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
